--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -7,6 +7,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
+                        <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+                            <button type="button" class="close" data-miss="alert" aria-label="Close">
+                                <span aria-hidden="true">x</span>
+                            </button>
+                            <p th:text="#{login.error.message}" />
+                        </div>
+                        <div th:if="${param.logout}" class="alert alert-success alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">x</span>
+                            </button>
+                            <p th:text="#{login.logout.success}" />
+                        </div>
                         <div class="well">
                             <div class="text-center">
                                 <h1 th:text="#{login.h1.text}"></h1>
